tab align fix

--- a/geotaste/assets/style.css
+++ b/geotaste/assets/style.css
@@ -356,6 +356,7 @@ p {
     width:fit-content;
     float:right;
     pointer-events: all;
+    flex-grow:1;
 }
 
 .content-tabs-row {
